2003-03-05  James Henstridge  <james@daa.com.au>

	* modulesets/gnome24.modules: add new moduleset for gnome 2.4.

	* modulesets/gnome*.modules: update to scrollkeeper-0.3.12.

2003-03-02  James Henstridge  <james@daa.com.au>

	* bootstrap.py (automake-1.7): update to automake 1.7.3
	(pkg-config): update to 0.15.0

2003-02-25  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome22.modules: update libbonoboui to use 
	gnome-2-2 branch

2003-02-22  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome22.modules: update ggv to use gnome-2-2 branch

2003-02-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome22.modules:
	Updated vte to use gnome-2-2 branch.

2003-02-19  Calum Benson  <calum.benson@sun.com>

	* modulesets/gnome22.modules:

	Updated gnome-themes to use gnome-2-2 branch.

2003-02-19  James Henstridge  <james@daa.com.au>

	* modulesets/gnome22.modules (gnome-session): fix typo in revision
	name.
	(gtkhtml2): move to gnome-2-2 branch.

2003-02-17  Will LaShell  <will@lashell.net>

	* modulesets/gnome22.modules: Update following modules to
        their 2.2 branches [ linc, ORBit2, gnome-session, eog ]

2003-01-13  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome22.modules: update procman branch
	to gnome-2-2

2003-02-12  Marco Pesenti Gritti  <marco@it.gnome.org>

	* module.py: Add a MozillaModule class 
	* modulesets/gnome22.modules: Add epiphany and mozilla

2003-02-12  James Henstridge  <james@daa.com.au>

	* modulesets/gnome22.modules (xchat): update to 2.0.0.
	(gnet): check out the GNET_1_1 branch.  Fixes bug 105589.
	(gaim): add gaim, using patch from bug 105769.

2003-02-11  James Henstridge  <james@daa.com.au>

	* modulesets/gnome22.modules: fix up dependencies of the xchat
	module from Will's patch (bug 105766).

2003-02-10  James Henstridge  <james@daa.com.au>

	* modulesets/gnome20.modules (pango): same.

	* modulesets/gnome22.modules (pango): move the autogenargs from
	gtk+.
