@@ -1,5 +1,8 @@
 2003-03-05  James Henstridge  <james@daa.com.au>
 
+	* jhbuild.py (do_update): take arguments similar to build and
+	buildone.
+
 	* modulesets/gnome24.modules: add new moduleset for gnome 2.4.
 
 	* modulesets/gnome*.modules: update to scrollkeeper-0.3.12.
